--- a/config-as-code/helm/charts/business-services/egov-finance/values.yaml
+++ b/config-as-code/helm/charts/business-services/egov-finance/values.yaml
@@ -17,9 +17,9 @@ httpPort: 8080
 
 resources: |
   limits:
-    memory: "3Gi"
+    memory: "4Gi"
   requests:
-    memory: "3Gi"
+    memory: "4Gi"
 min-pool-connection: "5"
 max-pool-connection: "5"
 collection-version: V2
@@ -106,8 +106,29 @@ env: |
     value: {{ index .Values "max-pool-connection" | quote }}
 healthChecks:
   enabled: true
-  livenessProbePath: "/"
-  readinessProbePath: "/"
+  #livenessProbePath: "/"
+  livenessProbe: |
+    failureThreshold: 10
+    httpGet:
+      path: /
+      port: 8080
+      scheme: HTTP
+    initialDelaySeconds: 180
+    periodSeconds: 60
+    successThreshold: 1
+    timeoutSeconds: 10
+
+  #readinessProbePath: "/"
+  readinessProbe: |
+    failureThreshold: 5
+    httpGet:
+      path: /
+      port: 8080
+      scheme: HTTP
+    initialDelaySeconds: 120
+    periodSeconds: 30
+    successThreshold: 1
+    timeoutSeconds: 10
 
 extraVolumeMounts: |
   - mountPath: /opt/jboss/wildfly/modules/system/layers/base/org/egov/settings/main/config/egov-erp-override.properties
